--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/searchButton"
                 android:text="Search"
-                android:background="@color/black"
+                android:background="@color/background_color"
                 android:layout_marginStart="8dp">
             </com.google.android.material.button.MaterialButton>
         </LinearLayout>
