--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="temperature_text">#2196F3</color>
     <color name="description_text">#11454444</color>
 
-    <color name="background_color"></color>
+    <color name="background_color">#E1D4F6</color>
 </resources>
