--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    android:layout_marginTop="50dp"
     android:padding="16dp">
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
@@ -58,28 +57,38 @@
         app:layout_constraintTop_toBottomOf="@+id/searchCard">
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="24dp">
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/cloud_solid">
-            </ImageView>
-
+            android:padding="24dp"
+            android:color="@color/black"
+            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/temperatureText"
-                android:textColor="@color/temperature_text"
-                android:textSize="64sp"
-                android:layout_gravity="center_horizontal"
-                tools:text="24C"
-                android:textStyle="bold">
+                android:text="city"
+                android:textSize="24sp"
+                android:id="@+id/cityName">
+
             </TextView>
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/cloud_solid"></ImageView>
+
+            <TextView
+                android:id="@+id/temperatureText"
+                android:layout_width="wrap_content"
+                android:layout_height="58dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/temperature_text"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                tools:text="24°C"></TextView>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -90,9 +99,36 @@
                 android:id="@+id/description_text"
                 tools:text="Cloudy day">
             </TextView>
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/weatherImg"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+
+                />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/weatherCard"
+        app:cardElevation="8dp"
+        android:id="@+id/mapCard"
+        app:cardCornerRadius="12dp">
+
+        <fragment
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity" />
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
